Fixed overlapping action icons in responsive view

--- a/src/app/accounts/accounts.component.scss
+++ b/src/app/accounts/accounts.component.scss
@@ -17,7 +17,7 @@ tr:nth-child(even) {
 
 th.mat--header-cell:last-of-type,
 td.mat-cell:last-of-type {
-  min-width: 60px;
+  min-width: 100px;
 }
 
 .fa-address-book,
